fix: updated update request
