# openapi3.yaml
@@ -22,27 +22,6 @@ paths:
             text/html:
               schema:
                 $ref: '#/components/schemas/acceptall'
-  /api/files:
-    get:
-      summary: Get stream file by path
-      parameters:
-        - name: pathSuffix
-          in: query
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  files:
-                    type: array
-                    items:
-                      type: string
     post:
       operationId: graphqlFetchData
       tags:
@@ -62,6 +41,79 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/acceptall'
+  /file:
+    get:
+      tags:
+        - File APIs
+      summary: Get stream file by path
+      parameters:
+        - name: path
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: type
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  files:
+                    type: array
+                    items:
+                      type: string
+
+    post:
+      tags:
+        - File APIs
+      summary: Write stream file to path
+      parameters:
+        - name: path
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: type
+          in: query
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+              required:
+                - file
+          application/octet-stream:
+            schema:
+              type: string
+              format: binary
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  files:
+                    type: array
+                    items:
+                      type: string
+
 components:
   schemas:
     acceptall:
