# src/stream-route/streamController.ts
@@ -14,18 +14,44 @@ export class StreamController {
     this.storageExplorerManager = container.resolve(StorageExplorerManager);
   }
 
-  public getStreamFile = async (req: Request, res: Response, next: NextFunction) => {
+  public getStreamFile = async (req: Request, res: Response): Promise<void> => {
     try {
-      const { pathSuffix, type } = req.query;
+      const { path, type } = req.query;
       const ctx = req.body;
 
-      const fileContent = await this.storageExplorerManager.getStreamFile({ pathSuffix: pathSuffix as string, type: type as RecordType }, ctx);
+      const stream = await this.storageExplorerManager.getStreamFile(
+        {
+          path: path as string,
+          type: type as RecordType,
+        },
+        ctx
+      );
 
-      fileContent.pipe(res);
+      stream.pipe(res);
 
-      next();
+      stream.on('error', (err) => {
+        res.status(400).send('Error streaming file: File not found');
+      });
     } catch (err) {
-      next(err);
+      res.status(500).send(err);
+    }
+  };
+
+  public writeStreamFile = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const { path, type } = req.query;
+      const ctx = { requestHeaders: req.headers };
+      const file = req.file;
+
+      const stream = await this.storageExplorerManager.writeStreamFile({ path: path as string, type: type as RecordType }, file, ctx);
+
+      stream.pipe(res);
+
+      stream.on('error', (err) => {
+        res.status(400).send('Error streaming file: File not found');
+      });
+    } catch (err) {
+      res.status(500).send(err);
     }
   };
 }
